변경사항이 저장되는지에 대한 테스트

--- a/TP_Test/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP_Test/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -184,6 +184,28 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/HDRI
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/TestResource
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/TestResource
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/새 폴더
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -198,14 +220,19 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+BoxComponent="\"Object\" "
+ShapeComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/TestResource/BP-TestActor
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -260,9 +287,60 @@ BP_ThirdPersonCharacter_C.Actor=True
 BP_ThirdPersonCharacter_C.Input=True
 BP_ThirdPersonCharacter_C.Events=True
 BP_ThirdPersonCharacter_C.Materials=True
+BP-TestActor_C.Tick=True
+BP-TestActor_C.Replication=True
+BP-TestActor_C.Rendering=True
+BP-TestActor_C.Collision=True
+BP-TestActor_C.Actor=True
+BP-TestActor_C.Input=True
+BP-TestActor_C.HLOD=True
+BP-TestActor_C.Physics=True
+BP-TestActor_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+/Game/ThirdPerson/TestResource/BP-TestActor.BP-TestActor=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -284,8 +362,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -329,7 +407,7 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=94.000 Y=141.000
+ScreenPosition=X=75.000 Y=144.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
